tools/gitui/test/snapshots/tui_integration_tests__tui_subtree_movement_in_progress.snap
---
source: hs-github-tools/tools/gitui/test/tui_integration_tests.rs
expression: output
---
┌Branches────────────────────┐┌Recent Commits────┐
│  main                      ││                  │
│    branch_1                ││                  │
│>>  branch_2                ││                  │
│      stack_root            ││                  │
│        stack_child_1       ││                  │
│          stack_child_2     ││                  │
│            stack_child_3   ││                  │
│    branch_3                ││                  │
│    branch_4                ││                  │
│    z_branch                ││                  │
│                            ││                  │
│                            ││                  │
│                            ││                  │
│                            ││                  │
│                            ││                  │
└────────────────────────────┘└──────────────────┘
┌Help────────────────────────────────────────────┐
│esc: cancel | space: release | j/k: select paren│
└────────────────────────────────────────────────┘
